added pages for speakers

--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -7,9 +7,11 @@ permalink: /pages/speakers
 ## IPI Conference Speakers
 
 <ul>
-{% for page in posts.pages %}
+{% for speaker in site.categories.speaker %}
 	<li>
-		<p>{{ forloop.index }}: {{ page.title }}</p>
+		<p><a href="{{speaker.url}}">{{ speaker.title }}</a><br />
+			<i>{{speaker.position}}</i>
+		</p>
 	</li>
 {% endfor %}
 </ul>
