update speakers page

--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -9,7 +9,7 @@ permalink: /pages/speakers
 <ul>
 {% for speaker in site.categories.speaker %}
 	<li>
-		<p><a href="{{speaker.url}}">{{ speaker.title }}</a><br />
+		<p><a href="{{speaker.link}}">{{ speaker.title }}</a><br />
 			<i>{{speaker.position}}</i>
 		</p>
 	</li>
