--- a/_posts/2012-08-31-anicoll.md
+++ b/_posts/2012-08-31-anicoll.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Alexander Nicoll
-permalink: /speakers/anicoll
+permalink: speakers/anicoll
 categories: 
     - speaker
 thumbnail: /img
