--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -7,10 +7,10 @@ permalink: /pages/speakers
 ## IPI Conference Speakers
 
 <ul>
-{% for speaker in site.categories.speaker %}
+{% for post in site.categories.speaker %}
 	<li>
-		<p><a href="{{speaker.link}}">{{ speaker.title }}</a><br />
-			<i>{{speaker.position}}</i>
+		<p><a href="{{post.url}}">{{ post.title }}</a><br />
+			<i>{{post.position}}</i>
 		</p>
 	</li>
 {% endfor %}
