changed post.url again

--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -9,7 +9,7 @@ permalink: /pages/speakers
 <ul>
 {% for post in site.categories.speaker %}
 	<li>
-		<p><a href="{{post.link}}">{{ post.title }}</a><br />
+		<p><a href="{{post.url}}">{{ post.title }}</a><br />
 			<i>{{post.position}}</i>
 		</p>
 	</li>
