--- a/_posts/pages/2012-08-30-speakers.md
+++ b/_posts/pages/2012-08-30-speakers.md
@@ -6,7 +6,7 @@ permalink: /pages/speakers
 
 ## IPI Conference Speakers
 
-<ul>
+<ul class="speakers">
 {% for post in site.categories.speaker %}
 	<li>
 		<p><a href="{{post.url}}">{{ post.title }}</a><br />
@@ -15,5 +15,3 @@ permalink: /pages/speakers
 	</li>
 {% endfor %}
 </ul>
-
-
